# sympho

./: Cargo.toml  README.md
src/: define.rs  events.rs  import.rs  lib.rs  main.rs
src/commands/: current.rs  help.rs  join.rs  leave.rs  looping.rs  mod.rs  pause.rs  play.rs  queue.rs  resume.rs  skip.rs  stop.rs  volume.rs
ytdl-rs/: Cargo.toml  README.md
ytdl-rs/from_py_dict/: Cargo.toml
ytdl-rs/from_py_dict/src/: lib.rs
ytdl-rs/from_py_dict_derive/: Cargo.toml
ytdl-rs/from_py_dict_derive/src/: lib.rs
ytdl-rs/src/: lib.rs  main.rs
ytdl-rs/youtube_dl_pyo3/: Cargo.toml  generate_asserts.sh  generate_options_setters.sh  generate_pydict_setters.sh
ytdl-rs/youtube_dl_pyo3/src/: lib.rs
ytdl-rs/youtube_dl_pyo3/src/py/: download.py  extract_info.py  list_extractors.py
