[package]
name = "sympho"
author = "uru"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
youtube_dl = "0.6.1"
once_cell = "1.7.2"
url = "2.2.1"
humantime = "2.1.0"
const_env = "0.1.2"
rand = "0.8.3"

[dependencies.serenity]
features = ["cache", "standard_framework", "voice", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["driver-core"]

[dependencies.tokio]
version = "1.5.0"
features = ["macros", "rt-multi-thread"]
