[package]
name = "sympho"
author = "uru"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
tracing-futures = "0.2.5"
youtube_dl = "0.6.1"
once_cell = "1.8.0"
url = "2.2.2"
humantime = "2.1.0"
const_env = "0.1.2"
rand = "0.8.4"
serde = "1.0.126"
serde_json = "1.0.64"
wait-timeout = "0.2.0"
anyhow = "1.0.41"

[dependencies.serenity]
features = ["cache", "standard_framework", "voice", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["driver-core"]

[dependencies.tokio]
version = "1.7.1"
features = ["macros", "rt-multi-thread"]
