[package]
name = "sympho"
author = "uru"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.27"
tracing-subscriber = "0.2.22"
tracing-futures = "0.2.5"
once_cell = "1.8.0"
url = "2.2.2"
humantime = "2.1.0"
const_env = "0.1.2"
rand = "0.8.4"
serde = "1.0.130"
serde_json = "1.0.68"
wait-timeout = "0.2.0"
anyhow = "1.0.44"
valve-server-query = { git = "https://github.com/2vg/valve-server-query" }
ytdl-rs = { path = "./ytdl-rs" }

[dependencies.serenity]
features = ["cache", "standard_framework", "voice", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "next"

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird"
branch = "next"
features = ["driver-core"]

[dependencies.tokio]
version = "1.11.0"
features = ["macros", "rt-multi-thread"]
