[package]
name = "from_py_dict_derive"
version = "0.1.0"
authors = ["Jonah Brüchert <jbb.prv@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
pyo3 = "0.14.5"
syn = "1.0.76"
quote = "1.0.9"
from_py_dict = { path = "../from_py_dict" }
