[package]
name = "youtube_dl_pyo3"
version = "0.1.0"
authors = ["Jonah Brüchert <jbb.prv@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.14.5", features = ["auto-initialize"] }
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"
concat-idents = "1.1.3"
from_py_dict_derive = { path = "../from_py_dict_derive" }
from_py_dict = { path = "../from_py_dict" }
